Made binary installable

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -1,2 +1,5 @@
 add_executable(asafe src/main.cpp)
 target_link_libraries(asafe web commons system)
+
+install(TARGETS asafe RUNTIME DESTINATION bin)
+install(FILES data/asafe.hook DESTINATION /etc/pacman.d/hooks)
