--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_executable(asafe src/main.cpp)
 target_link_libraries(asafe web commons system)
 
-install(TARGETS asafe RUNTIME DESTINATION bin)
+install(TARGETS asafe RUNTIME DESTINATION /usr/bin)
 install(FILES data/asafe.hook DESTINATION /etc/pacman.d/hooks)
+install(FILES data/mode DESTINATION /usr/share/asafe/)
